--- a/package.json
+++ b/package.json
@@ -29,7 +29,14 @@
     "serialport": "^11.0.0",
     "vite-plugin-commonjs-externals": "^0.1.3",
     "xterm": "^5.2.1",
-    "xterm-addon-fit": "^0.7.0"
+    "xterm-addon-canvas": "^0.4.0",
+    "xterm-addon-fit": "^0.7.0",
+    "xterm-addon-ligatures": "^0.6.0",
+    "xterm-addon-search": "^0.12.0",
+    "xterm-addon-serialize": "^0.10.0",
+    "xterm-addon-unicode11": "^0.5.0",
+    "xterm-addon-web-links": "^0.8.0",
+    "xterm-addon-webgl": "^0.15.0"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
